--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container-1">
         <div class="header-logo-text">
-            <p>Header Logo</p>
+            <a href="">Header Logo</a>
         </div>
         <div class="header-link-text">
-            <p>header link one</p>
-            <p>header link two</p>
-            <p>header link three</p>
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
         </div>
     </div>
     <div class="container-2">
@@ -27,9 +27,9 @@
             <div class="secondary-text">
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and has lower contrast.</p>
             </div>
-            <div class="sign-up-button">
+            <a href="" class="sign-up-button">
                 <p>Sign up</p>
-            </div>
+            </a>
         </div>
         <div class="grey-image-container">
             <div class="image-container">
@@ -68,11 +68,15 @@
     </div>
     <div class="container-5">
         <div class="sign-up-container">
-            <p>Call to action! It's time!</p>
-            <p>If you enjoy this prodcut please sign up!</p>
-            <div class="sign-up-button-2">
-               <p>sign up</p>
+            <div class="sign-up-quotes">
+                <p>Call to action! It's time!</p>
+                <div class="sign-up-quotes-2">
+                    <p>If you enjoy this prodcut please sign up!</p>
+                </div>
             </div>
+            <a href="" class="sign-up-button-2">
+               <p="">sign up</p>
+            </a>
         </div>
     </div>
 </body>
