Landing page updated

--- a/index.html
+++ b/index.html
@@ -79,5 +79,8 @@
             </a>
         </div>
     </div>
+    <div class="container-6">
+        <p>Copyright © Liminal</p>
+    </div>
 </body>
 </html>
